# komella

./: .gitignore  README  README.md
code/: CMakeLists.txt
code/OpenCV-2.4.3/: cvconfig.h
code/demo/: demo.cpp  read_image.cpp  video-write-webcam.cpp  video-write.cpp  webcam_example.cpp
code/layout/: layout_constructor.cpp  layout_constructor.h
code/layout_constructor/: layout_constructor.cpp
code/povray/scripts/: person_definition.pov
code/time_series_state/: stream.h  stream_processor.cpp  stream_processor.h
tools/: install_dependencies.sh  setup_environment.sh
